--- a/Jsp02_MultiDelete_DELETE/.project
+++ b/Jsp02_MultiDelete_DELETE/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Jsp02_MultiDelete</name>
+	<name>Jsp02_MultiDelete_DELETE</name>
 	<comment></comment>
 	<projects>
 	</projects>
