--- a/Jsp03_MVC_Servlet/WebContent/WEB-INF/web.xml
+++ b/Jsp03_MVC_Servlet/WebContent/WEB-INF/web.xml
@@ -3,10 +3,16 @@
   <display-name>Jsp03_MVC_Servlet</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+   <servlet>
+  	<servlet-name>mvc</servlet-name>
+  	<servlet-class>com.mvc.controller.MVCController</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+  	<servlet-name>mvc</servlet-name>
+  	<url-pattern>/controller.do</url-pattern>
+  </servlet-mapping>
+  
 </web-app>
