20210312 마이바티스 연습

--- a/Jsp02_MultiDelete/.project
+++ b/Jsp02_MultiDelete/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Jsp02_MultiDelete_NEW</name>
+	<name>Jsp02_MultiDelete</name>
 	<comment></comment>
 	<projects>
 	</projects>
